update: can push local files from colab notebook

--- a/rl_policy_fusion.ipynb
+++ b/rl_policy_fusion.ipynb
@@ -6,7 +6,7 @@
       "name": "rl-policy-fusion.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP188ujN7qro3BQ0EFB76oQ",
+      "authorship_tag": "ABX9TyOydTdTlxUtrJ90KM3xAH5/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1465,7 +1465,7 @@
         "id": "j8j7TlfTTAs6"
       },
       "source": [
-        "# Push changes to git"
+        "# Push changed files to git"
       ]
     },
     {
@@ -1474,6 +1474,8 @@
         "id": "glRvP6-mTE6X"
       },
       "source": [
+        "commit_msg = input('Enter a commit message: ')\n",
+        "!git commit -m ${commit_msg}\n",
         "!git push -u origin main"
       ],
       "execution_count": null,
