--- a/rl_policy_fusion.ipynb
+++ b/rl_policy_fusion.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "rl-policy-fusion.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqy+56GmEZGcrcA657kZ/J",
+      "authorship_tag": "ABX9TyMHnn7LFKxuHmwacBB8SHiL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,6 +168,7 @@
       "source": [
         "import gym\n",
         "import numpy as np\n",
+        "import torch as pt\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "from stable_baselines3 import PPO"
@@ -542,7 +543,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e210bE043JI-",
-        "outputId": "b07a73a6-b7b5-4c89-93c5-f7e6c4273944"
+        "outputId": "02d3cd27-4b43-4906-a967-b64afab78ebf"
       },
       "source": [
         "os.makedirs('../content/agent2', exist_ok=True)\n",
@@ -552,7 +553,7 @@
         "\n",
         "model = PPO('MlpPolicy', env, verbose=1, seed=2)"
       ],
-      "execution_count": 14,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +603,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XCcgLG5s4VQw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XCcgLG5s4VQw",
+        "outputId": "75dd4510-73c3-4b1f-d241-cb10745c1195"
       },
       "source": [
         "# Train the agent\n",
@@ -611,8 +616,120 @@
         "# Save the agent\n",
         "model.save('../content/agent2/model')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-----------------------------------------\n",
+            "| rollout/                |             |\n",
+            "|    ep_len_mean          | 22.7        |\n",
+            "|    ep_rew_mean          | 22.7        |\n",
+            "| time/                   |             |\n",
+            "|    fps                  | 1405        |\n",
+            "|    iterations           | 1           |\n",
+            "|    time_elapsed         | 1           |\n",
+            "|    total_timesteps      | 2048        |\n",
+            "| train/                  |             |\n",
+            "|    approx_kl            | 0.011827447 |\n",
+            "|    clip_fraction        | 0.0758      |\n",
+            "|    clip_range           | 0.2         |\n",
+            "|    entropy_loss         | -0.595      |\n",
+            "|    explained_variance   | 0.435       |\n",
+            "|    learning_rate        | 0.0003      |\n",
+            "|    loss                 | 26.3        |\n",
+            "|    n_updates            | 50          |\n",
+            "|    policy_gradient_loss | -0.0143     |\n",
+            "|    value_loss           | 60.7        |\n",
+            "-----------------------------------------\n",
+            "----------------------------------------\n",
+            "| rollout/                |            |\n",
+            "|    ep_len_mean          | 29.9       |\n",
+            "|    ep_rew_mean          | 29.9       |\n",
+            "| time/                   |            |\n",
+            "|    fps                  | 1029       |\n",
+            "|    iterations           | 2          |\n",
+            "|    time_elapsed         | 3          |\n",
+            "|    total_timesteps      | 4096       |\n",
+            "| train/                  |            |\n",
+            "|    approx_kl            | 0.00962171 |\n",
+            "|    clip_fraction        | 0.107      |\n",
+            "|    clip_range           | 0.2        |\n",
+            "|    entropy_loss         | -0.686     |\n",
+            "|    explained_variance   | 0.000967   |\n",
+            "|    learning_rate        | 0.0003     |\n",
+            "|    loss                 | 6.31       |\n",
+            "|    n_updates            | 10         |\n",
+            "|    policy_gradient_loss | -0.0188    |\n",
+            "|    value_loss           | 52.1       |\n",
+            "----------------------------------------\n",
+            "------------------------------------------\n",
+            "| rollout/                |              |\n",
+            "|    ep_len_mean          | 39.7         |\n",
+            "|    ep_rew_mean          | 39.7         |\n",
+            "| time/                   |              |\n",
+            "|    fps                  | 949          |\n",
+            "|    iterations           | 3            |\n",
+            "|    time_elapsed         | 6            |\n",
+            "|    total_timesteps      | 6144         |\n",
+            "| train/                  |              |\n",
+            "|    approx_kl            | 0.0036582109 |\n",
+            "|    clip_fraction        | 0.0532       |\n",
+            "|    clip_range           | 0.2          |\n",
+            "|    entropy_loss         | -0.666       |\n",
+            "|    explained_variance   | 0.0811       |\n",
+            "|    learning_rate        | 0.0003       |\n",
+            "|    loss                 | 16.9         |\n",
+            "|    n_updates            | 20           |\n",
+            "|    policy_gradient_loss | -0.0164      |\n",
+            "|    value_loss           | 44.9         |\n",
+            "------------------------------------------\n",
+            "-----------------------------------------\n",
+            "| rollout/                |             |\n",
+            "|    ep_len_mean          | 49.6        |\n",
+            "|    ep_rew_mean          | 49.6        |\n",
+            "| time/                   |             |\n",
+            "|    fps                  | 916         |\n",
+            "|    iterations           | 4           |\n",
+            "|    time_elapsed         | 8           |\n",
+            "|    total_timesteps      | 8192        |\n",
+            "| train/                  |             |\n",
+            "|    approx_kl            | 0.010495849 |\n",
+            "|    clip_fraction        | 0.081       |\n",
+            "|    clip_range           | 0.2         |\n",
+            "|    entropy_loss         | -0.63       |\n",
+            "|    explained_variance   | 0.204       |\n",
+            "|    learning_rate        | 0.0003      |\n",
+            "|    loss                 | 22.6        |\n",
+            "|    n_updates            | 30          |\n",
+            "|    policy_gradient_loss | -0.0193     |\n",
+            "|    value_loss           | 58.4        |\n",
+            "-----------------------------------------\n",
+            "-----------------------------------------\n",
+            "| rollout/                |             |\n",
+            "|    ep_len_mean          | 61.8        |\n",
+            "|    ep_rew_mean          | 61.8        |\n",
+            "| time/                   |             |\n",
+            "|    fps                  | 893         |\n",
+            "|    iterations           | 5           |\n",
+            "|    time_elapsed         | 11          |\n",
+            "|    total_timesteps      | 10240       |\n",
+            "| train/                  |             |\n",
+            "|    approx_kl            | 0.008099826 |\n",
+            "|    clip_fraction        | 0.0659      |\n",
+            "|    clip_range           | 0.2         |\n",
+            "|    entropy_loss         | -0.607      |\n",
+            "|    explained_variance   | 0.233       |\n",
+            "|    learning_rate        | 0.0003      |\n",
+            "|    loss                 | 34.5        |\n",
+            "|    n_updates            | 40          |\n",
+            "|    policy_gradient_loss | -0.0149     |\n",
+            "|    value_loss           | 70.5        |\n",
+            "-----------------------------------------\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -856,6 +973,26 @@
       "source": [
         "## Create new agent with fused policy"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ES6euqV7j965"
+      },
+      "source": [
+        "def replace_policy(model, new_policy):\n",
+        "\n",
+        "    # Replace action net with given policy\n",
+        "    policy = model.get_parameters().get('policy')\n",
+        "    policy['action_net.weight'] = pt.from_numpy(new_policy)\n",
+        "    updated_param = {'policy': policy}\n",
+        "\n",
+        "    # Set policy parameter \n",
+        "    model.set_parameters(updated_param, exact_match=False)\n",
+        "    return model\n"
+      ],
+      "execution_count": 186,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
